tests/baselines/reference/packageJsonImportsErrors(module=node18).errors.txt
/index.ts(2,16): error TS2877: This import uses a '.ts' extension to resolve to an input TypeScript file, but will not be rewritten during emit because it is not a relative path.


==== /package.json (0 errors) ====
    {
      "name": "pkg",
      "type": "module",
      "imports": {
        "#foo.ts": "./foo.ts",
        "#internal/*": "./internal/*"
      },
      "exports": {
        "./*.ts": {
          "source": "./*.ts",
          "default": "./*.js"
        }
      }
    }
    
==== /foo.ts (0 errors) ====
    export {};
    
==== /internal/foo.ts (0 errors) ====
    export {};
    
==== /index.ts (1 errors) ====
    import {} from "#foo.ts"; // Ok
    import {} from "#internal/foo.ts"; // Error
                   ~~~~~~~~~~~~~~~~~~
!!! error TS2877: This import uses a '.ts' extension to resolve to an input TypeScript file, but will not be rewritten during emit because it is not a relative path.
    import {} from "pkg/foo.ts"; // Ok